Overhaul of the item system, no we have templated for rules and instances for specific items, we are ready for smooth future db integration