@@ -3,7 +3,6 @@ package com.ragnarok.engine.repository;
 import com.ragnarok.engine.enums.Element;
 import com.ragnarok.engine.item.defaults.EquipmentDefaults;
 import com.ragnarok.engine.item.equip.model.*;
-import com.ragnarok.engine.stat.StatBlock;
 
 import java.util.Collections;
 import java.util.List;
@@ -19,22 +18,22 @@ import java.util.Map;
  */
 public final class EquipmentRepository {
 
-    private static final Map<Long, Equipment> ITEMS;
+    private static final Map<Long, EquipmentTemplate> ITEMS;
 
     static {
         // --- Item Definitions ---
 
         // Armor
-        var cottonShirt = new ArmorItem(1001L, "Cotton Shirt", Element.NEUTRAL, ArmorType.ARMOR, EquipmentBonuses.ZERO.withDefense(2), 1, Collections.emptyList(), 1);
-        var basicShield = new ArmorItem(1002L, "Shield", Element.NEUTRAL, ArmorType.SHIELD, EquipmentBonuses.ZERO.withDefense(1), 1, List.of("SWORDMAN"), 1);
+        var cottonShirt = new ArmorTemplate(1001L, "Cotton Shirt", Element.NEUTRAL, ArmorType.ARMOR, EquipmentBonuses.ZERO.withDefense(2), 1, Collections.emptyList(), 1);
+        var basicShield = new ArmorTemplate(1002L, "Shield", Element.NEUTRAL, ArmorType.SHIELD, EquipmentBonuses.ZERO.withDefense(1), 1, List.of("SWORDMAN"), 1);
 
         // Weapons
-        var knife = new WeaponItem(2001L, "Knife", Element.NEUTRAL, WeaponType.DAGGER, EquipmentBonuses.ZERO.withAttack(10), 1, Collections.emptyList(), 2, EquipmentDefaults.STANDARD_DAGGER_COMPATIBILITY);
-        var basicSword = new WeaponItem(2002L, "Sword", Element.NEUTRAL, WeaponType.ONE_HANDED_SWORD, EquipmentBonuses.ZERO, 1, List.of("SWORDMAN"), 1, EquipmentDefaults.STANDARD_1H_SWORD_COMPATIBILITY);
-        var twoHandedSword = new WeaponItem(2003L, "Two-Handed Sword", Element.NEUTRAL, WeaponType.TWO_HANDED_SWORD, EquipmentBonuses.ZERO, 25, List.of("SWORDMAN"), 2);
-        var highLevelSword = new WeaponItem(2004L, "Blade of the Heavens", Element.HOLY, WeaponType.ONE_HANDED_SWORD, EquipmentBonuses.ZERO, 99, List.of("SWORDMAN"), 0);
-        var assassinKatar = new WeaponItem(2005L, "Katar of the Shadows", Element.POISON, WeaponType.KATAR, EquipmentBonuses.ZERO, 40, List.of("ASSASSIN"), 2);
-        var incompatibleAxe = new WeaponItem(2006L, "Battle Axe", Element.EARTH, WeaponType.ONE_HANDED_AXE, EquipmentBonuses.ZERO, 10, List.of("SWORDMAN"), 1, EquipmentDefaults.NON_COMPATIBLE);
+        var knife = new WeaponTemplate(2001L, "Knife", Element.NEUTRAL, WeaponType.DAGGER, EquipmentBonuses.ZERO.withAttack(10), 1, Collections.emptyList(), 2, EquipmentDefaults.STANDARD_DAGGER_COMPATIBILITY);
+        var basicSword = new WeaponTemplate(2002L, "Sword", Element.NEUTRAL, WeaponType.ONE_HANDED_SWORD, EquipmentBonuses.ZERO, 1, List.of("SWORDMAN"), 1, EquipmentDefaults.STANDARD_1H_SWORD_COMPATIBILITY);
+        var twoHandedSword = new WeaponTemplate(2003L, "Two-Handed Sword", Element.NEUTRAL, WeaponType.TWO_HANDED_SWORD, EquipmentBonuses.ZERO, 25, List.of("SWORDMAN"), 2);
+        var highLevelSword = new WeaponTemplate(2004L, "Blade of the Heavens", Element.HOLY, WeaponType.ONE_HANDED_SWORD, EquipmentBonuses.ZERO, 99, List.of("SWORDMAN"), 0);
+        var assassinKatar = new WeaponTemplate(2005L, "Katar of the Shadows", Element.POISON, WeaponType.KATAR, EquipmentBonuses.ZERO, 40, List.of("ASSASSIN"), 2);
+        var incompatibleAxe = new WeaponTemplate(2006L, "Battle Axe", Element.EARTH, WeaponType.ONE_HANDED_AXE, EquipmentBonuses.ZERO, 10, List.of("SWORDMAN"), 1, EquipmentDefaults.NON_COMPATIBLE);
 
 
         // --- Populate the Map ---
@@ -52,8 +51,8 @@ public final class EquipmentRepository {
 
     private EquipmentRepository() {}
 
-    public static Equipment findById(long itemId) {
-        Equipment item = ITEMS.get(itemId);
+    public static EquipmentTemplate findById(long itemId) {
+        EquipmentTemplate item = ITEMS.get(itemId);
         if (item == null) {
             throw new IllegalArgumentException("No EquipmentItem found with ID: " + itemId);
         }
@@ -65,7 +64,7 @@ public final class EquipmentRepository {
      * @param itemIds la lista de IDs a buscar.
      * @return una lista inmutable con los EquipmentItems encontrados.
      */
-    public static List<Equipment> findByIds(List<Long> itemIds) {
+    public static List<EquipmentTemplate> findByIds(List<Long> itemIds) {
         if (itemIds == null || itemIds.isEmpty()) {
             return Collections.emptyList();
         }
